@startuml

title __SERVICES's Class Diagram__\n

  namespace com.lestscode.ecommerce {
    namespace services {
      class com.lestscode.ecommerce.services.CustomerServices {
          + create()
          + delete()
          + getById()
          + listAll()
          + update()
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace services {
      class com.lestscode.ecommerce.services.ProductService {
          + create()
          + delete()
          + getById()
          + listAll()
          + update()
      }
    }
  }
  

  com.lestscode.ecommerce.services.CustomerServices .up.|> com.lestscode.ecommerce.services.interfaces.ICustomeService
  com.lestscode.ecommerce.services.CustomerServices o-- com.lestscode.ecommerce.repositories.CustomerRepository : customerRepository
  com.lestscode.ecommerce.services.ProductService .up.|> com.lestscode.ecommerce.services.interfaces.IProductService
  com.lestscode.ecommerce.services.ProductService o-- com.lestscode.ecommerce.repositories.ProductRepository : productRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
